# graft

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  graft-spec.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: conformance.yml  docs-deploy.yml  firmware-build.yml  firmware-ci.yml  go-ci.yml  js-ci.yml  py-ci.yml  release.yml  rust-ci.yml  swift-ci.yml  wasm-ci.yml
broker/: Dockerfile  README.md  docker-compose.yml
broker/mosquitto/: mosquitto.conf
conformance/: README.md  runner.ts
conformance/vectors/: cobs_vectors.json  crc8_vectors.json  wire_vectors.json
firmware/: README.md  library.json  library.properties  platformio.ini
firmware/examples/BLEDevice/: BLEDevice.ino
firmware/examples/BasicBlink/: BasicBlink.ino
firmware/examples/DatastreamThermostat/: DatastreamThermostat.ino
firmware/examples/FullKitchen/: FullKitchen.ino
firmware/examples/MQTTSensor/: MQTTSensor.ino
firmware/examples/ServoControl/: ServoControl.ino
firmware/src/: Graft.h
firmware/src/conduyt/: ConduytDevice.cpp  ConduytDevice.h
firmware/src/conduyt/boards/: board_profiles_generated.h  mcu_id.h
firmware/src/conduyt/core/: conduyt_constants.h  conduyt_crc8.h
firmware/src/conduyt/modules/: ConduytModuleEncoder.h
firmware/src/graft/: GraftBoard.h  GraftContext.h  GraftDevice.cpp  GraftDevice.h  GraftModuleBase.h  GraftOTA.h  GraftPayload.h  GraftProvisioning.h
firmware/src/graft/core/: graft_cobs.c  graft_cobs.h  graft_constants.h  graft_crc8.h  graft_types.h  graft_wire.c  graft_wire.h
firmware/src/graft/modules/: GraftModuleDHT.h  GraftModuleEncoder.h  GraftModuleI2CPassthrough.h  GraftModuleNeoPixel.h  GraftModuleOLED.h  GraftModulePID.h  GraftModuleServo.h  GraftModuleStepper.h
firmware/test/: CMakeLists.txt  baseline-r4-minima-v2.txt  capability-audit.mjs  test_cobs.c
firmware/test/test_core_c/: test_crc8.c  test_wire.c
firmware/test/test_native_modules/: test_modules.cpp
protocol/: board-profiles.json  constants.json  generate.ts  package.json
protocol/boards/: arduino_nano_esp32.yml  esp32-c3-devkitm-1.yml  esp32-s2-saola-1.yml  esp32-s3-devkitc-1.yml  esp32dev.yml  leonardo.yml  mega2560.yml  nano.yml  nano_every.yml  nodemcuv2.yml  nrf52840_dk.yml  pico.yml  teensy36.yml  teensy40.yml  teensy41.yml  uno.yml  uno_r4_minima.yml  uno_r4_wifi.yml
protocol/mcus/: atmega2560.yml  atmega328p.yml  atmega32u4.yml  atmega4809.yml  esp32.yml  esp32c3.yml  esp32s2.yml  esp32s3.yml  esp8266.yml  imxrt1062.yml  kinetis_k66.yml  nrf52840.yml  ra4m1.yml  rp2040.yml
sdk/go/: README.md  cobs.go  cobs_test.go  conformance_test.go  constants.go  crc8.go  crc8_test.go  device.go  device_test.go  errors.go  go.mod  hello.go  pin.go  wire.go  wire_test.go
sdk/go/transports/: mock.go  transport.go
sdk/js/: README.md  package-lock.json  package.json  tsconfig.check.json  tsconfig.json  vitest.config.ts
sdk/js/src/: device.ts  hello.ts  index.ts  reconnect.ts  seq.ts
sdk/js/test/: cobs.test.ts  crc8.test.ts  device.test.ts  hello.test.ts  seq.test.ts  wire.test.ts
sdk/python/: README.md  pyproject.toml
sdk/python/src/conduyt/core/: crc8.py
sdk/python/src/conduyt_py.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sdk/python/src/graft/: __init__.py  device.py  hello.py  sync.py
sdk/python/src/graft/core/: cobs.py  constants.py  crc8.py  errors.py  wire.py
sdk/python/src/graft/modules/: __init__.py  dht.py  encoder.py  neopixel.py  oled.py  pid.py  servo.py  stepper.py
sdk/python/src/graft/transports/: __init__.py  mock.py  mqtt.py  serial.py
sdk/python/src/graft_py.egg-info/: PKG-INFO  SOURCES.txt
sdk/python/tests/: test_cobs.py  test_conformance.py  test_crc8.py  test_wire.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: cobs.rs  constants.rs  crc8.rs  device.rs  lib.rs  wire.rs
sdk/rust/src/modules/: mod.rs  servo.rs
sdk/rust/src/transports/: mod.rs
sdk/rust/tests/: conformance.rs
sdk/swift/: Package.swift  README.md
sdk/swift/Tests/: WireTests.swift
sdk/wasm/: Cargo.toml  README.md  package.json
sdk/wasm/js/: index.d.ts  index.mjs
sdk/wasm/src/: lib.rs
sdk/wasm/tests/: node.test.mjs  web.rs
site/: nuxt.config.ts  package-lock.json  package.json
site/.data/content/: contents.sqlite
site/app/composables/: useSerial.ts
site/app/layouts/: docs.vue
site/app/pages/: index.vue  playground.vue
site/app/utils/: avr-flash.ts
site/public/firmware/: manifest-esp8266.json  manifest-nano-esp32.json  manifest.json
test/: package.json  test-device.mjs  test-wasm-serial.mjs
(+91 files in other folders)
