[package]
name = "graft"
version = "0.1.0"
edition = "2021"
description = "GRAFT protocol SDK for Rust — host-side hardware control"
license = "MIT"
repository = "https://github.com/virgilvox/graft"
homepage = "https://github.com/virgilvox/graft"
keywords = ["iot", "hardware", "protocol", "serial", "embedded"]
categories = ["embedded", "hardware-support", "network-programming"]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
