[package]
name = "conduyt"
version = "0.3.0"
edition = "2021"
description = "CONDUYT protocol SDK for Rust — host-side hardware control"
license = "MIT"
repository = "https://github.com/virgilvox/conduyt"
homepage = "https://github.com/virgilvox/conduyt"
keywords = ["iot", "hardware", "protocol", "serial", "embedded"]
categories = ["embedded", "hardware-support", "network-programming"]

[features]
default = ["std"]
std = []

[dependencies]

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
