[package]
name = "conduyt-wasm"
version = "0.3.1"
edition = "2021"
description = "CONDUYT protocol core compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/virgilvox/conduyt"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
conduyt = { path = "../rust", default-features = false }
wasm-bindgen = "0.2"
js-sys = "0.3"
lol_alloc = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
